# litestar_docs

./: .gitignore  Dockerfile  README.md  Readme.md  docker-compose.yml  pyproject.toml
ansible/: zhost
ansible/service_litestar/: docker-compose.yml  litestar_setup.yml  rg_docker-compose.yml  rg_litestar_setup.yml
src/: app.py  funcs.py
src/doc_templates/: Example.docx
src/templates/: index.html
src/templates/login/: index.html
